--- a/pigGame/index.html
+++ b/pigGame/index.html
@@ -18,10 +18,11 @@
                     <p>0</p>
                 </div>
                 <div class="current-0">
-                    <p>0</p>
+                    <p class="rodada">Rodada</p>
+                    <p class="pontos-atuais0">0</p>
                 </div>
             </section>
-            <section class="player-1 player-active">
+            <section class="player-1">
                 <div class="player-1-titulo">
                     <p>PLAYER 2</p>
                 </div>
@@ -29,12 +30,16 @@
                     <p>0</p>
                 </div>
                 <div class="current-1">
-                    <p>0</p>
+                    <p class="rodada">Rodada</p>
+                    <p class="pontos-atuais1">0</p>
                 </div>
             </section>
         </div>
-                    
+
         <section class="botoes">
+            <div class="dice hidden">
+                <img class="imagem-dado" src="dice-1.png" alt="dado">
+            </div>
             <button class="btns btn-NewGame">
                 🆕 Novo jogo
             </button>
@@ -50,5 +55,6 @@
     <footer class="footer">
         <p>Desenvolvido por: Marcelo Murakami</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
